src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;





body{
    font-family: 'Manrope', sans-serif;
    color: white;
    
}


.active{
  color: #d87d4a;
}


input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

@layer components {
    h1 {
      @apply text-white font-semibold text-5xl leading-[1.1] tracking-wide  md:text-5xl lg:text-6xl  ;
    }
    h2 {
      @apply text-white font-semibold text-3xl leading-[1.1] tracking-wide  md:text-4xl lg:text-5xl  ;
    }
    h3{
      @apply  text-white font-semibold text-2xl leading-[1.1] tracking-wide  md:text-3xl lg:text-4xl  ;
    }

    h4{
      @apply  text-white font-semibold text-[1.1rem] leading-[1.1] tracking-wide  ;
    }
  
    p{
      @apply text-white font-light text-[0.9rem] opacity-50 lg:text-[1rem]
    }

    .flex-row-between{
      @apply flex  justify-between items-center
    }
    .flex-row{
      @apply flex  items-center
    }

    .flex-col-between{
      @apply flex  flex-col justify-between items-center
    }
    input{
      @apply border-lightGray border-[1px] w-full tracking-wider font-medium mt-2 text-black px-3 text-sm py-4  rounded-lg outline-0 
    }

    label{
      @apply text-paleBlack block font-bold text-xs
    }
  }

  img{
    cursor: pointer;
  }


   .hero{
   background-size: cover;
   background-position: center;
   
  } 


li{
  cursor: pointer;
}
  .cta{
    background-image: url(/public/images/home/desktop/pattern-circles.svg);
   background-repeat: no-repeat;
   background-position:center;
  }

  .articleImg{
     background-position:right !important;
     background-size: cover;
         
  }

  .custom-radio{
    height: 20px;
    width: 20px;
    border: 1px solid #ccc;
    border-radius: 50%;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  
  .orange-circle{
    height: 12px ;
    width: 12px;
    
    border-radius: 50%;
  }
  

 
 .error-msg{
  font-size: 12px;
  font-weight: 500;
 }

